--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-animated-list": "^1.0.2",
     "vue-hot-reload-api": "^2.2.4",
     "vue-html-loader": "^1.2.4",
+    "vue-js-tap": "^1.2.3",
     "vue-loader": "^7.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
